# soprano

./: README.md  pyproject.toml
soprano/: soprano_cli.py  tts.py
